Applied max-width to Valéry quote to prevent it ffrom getting too big on very large screens.

--- a/css/index.css
+++ b/css/index.css
@@ -158,6 +158,7 @@ div.block_quotes {
   place-items: center;
   margin: 0 auto;
   width: 100%;
+  max-width: 800px;
   padding: 1rem;
   margin-bottom: 50px;
   border: 1px solid grey;
